# Obfuscate

./: CMakeLists.txt  README.md  demo.cpp  obfuscate.h  test_unit.cpp
.github/workflows/: ci.yml
